<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:id="@+id/detailed_layout_fr"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/grid_item_movie_height">

                <ImageView
                    android:id="@+id/detailed_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/detailed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#80000000"
                    android:padding="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/detailed_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"/>

                <!--start of card view oof detailed sector-->
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/release_date"
                                android:textSize="@dimen/text_size"
                                android:textStyle="bold"/>

                            <View
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"/>

                            <TextView
                                android:id="@+id/detailed_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rating"
                                android:textSize="@dimen/text_size"
                                android:textStyle="bold"/>

                            <View
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"/>

                            <TextView
                                android:id="@+id/detailed_vote_average"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size"/>

                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <!-- end of card view of detailed sector-->
                <!--start of card view of trailers-->
                <android.support.v7.widget.CardView
                    android:id="@+id/detail_trailers_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/trailers"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/detailed_trailers"
                            android:layout_width="wrap_content"
                            android:layout_height="140dp"
                            android:divider="?android:dividerHorizontal"
                            android:orientation="horizontal"
                            android:showDividers="middle"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <!--end of cardview of trailers-->
                <!--start of card view of reviews-->
                <android.support.v7.widget.CardView
                    android:id="@+id/detail_reviews_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reviews"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/detailed_reviews"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:divider="?android:dividerHorizontal"
                            android:orientation="vertical"
                            android:showDividers="middle"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
                <!--end of card view of reviews-->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
